auto delete update

--- a/classes/services/timesheet/test.ipynb
+++ b/classes/services/timesheet/test.ipynb
@@ -1710,10 +1710,119 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pymongo import MongoClient\n",
+    "from pymongo.server_api import ServerApi\n",
+    "from bson import ObjectId\n",
+    "employeeSheetID = ObjectId(\"65d64e0c8dd84d95f68a436b\")\n",
+    "client = MongoClient('mongodb+srv://admin:EC2024@employeeportal.yyyw48g.mongodb.net/?retryWrites=true&w=majority&appName=EmployeePortal', server_api=ServerApi('1'), UuidRepresentation=\"standard\")\n",
+    "current_sheet = client.TimesheetDB.EmployeeSheets.find_one({\"_id\": employeeSheetID})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from bson import ObjectId\n",
+    "\n",
+    "# Assuming you have these variables defined\n",
+    "manager_id = \"65c408582b6c3e4c3208296d\"\n",
+    "sheet_id = \"65e0ed5477a1e068432a3fa7\"\n",
+    "\n",
+    "# Convert string IDs to ObjectId\n",
+    "manager_id = ObjectId(manager_id)\n",
+    "sheet_id = ObjectId(sheet_id)\n",
+    "\n",
+    "# Query the database\n",
+    "document = client.TimesheetDB.TimesheetRecords.find_one({\n",
+    "    \"managerID\": manager_id,\n",
+    "    \"managerSheetsInstances\": {\n",
+    "        \"$elemMatch\": {\n",
+    "            \"managerSheetsObjects\": sheet_id\n",
+    "        }\n",
+    "    }\n",
+    "})\n",
+    "\n",
+    "# Now 'document' contains the first document that matches the query, or None if no document was found"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_id': ObjectId('65e0ed1977a1e068432a3f8f'), 'managerID': ObjectId('65c408582b6c3e4c3208296d'), 'managerSheetsInstances': [{'managerSheetsObjects': ObjectId('65e0ed1977a1e068432a3f8e'), 'lastUpdateDate': datetime.datetime(2024, 2, 29, 20, 46, 17, 169000), 'version': 0}, {'managerSheetsObjects': ObjectId('65e0ed5477a1e068432a3fa7'), 'lastUpdateDate': datetime.datetime(2024, 2, 29, 20, 47, 16, 856000), 'version': 0}, {'managerSheetsObjects': ObjectId('65e0ee71220a8ba1184d8eee'), 'lastUpdateDate': datetime.datetime(2024, 2, 29, 20, 52, 1, 438000), 'version': 0}, {'managerSheetsObjects': ObjectId('65e0eed8220a8ba1184d8f0a'), 'lastUpdateDate': datetime.datetime(2024, 2, 29, 20, 53, 44, 973000), 'version': 0}, {'managerSheetsObjects': ObjectId('65e0ef8d220a8ba1184d8f5d'), 'lastUpdateDate': datetime.datetime(2024, 2, 29, 20, 56, 45, 774000), 'version': 0}, {'managerSheetsObjects': ObjectId('65e0f04c220a8ba1184d8f73'), 'lastUpdateDate': datetime.datetime(2024, 2, 29, 20, 59, 56, 18000), 'version': 0}, {'managerSheetsObjects': ObjectId('65e0f391112ad9bfb97a0551'), 'lastUpdateDate': datetime.datetime(2024, 2, 29, 21, 13, 53, 225000), 'version': 0}, {'managerSheetsObjects': ObjectId('65e0f80d112ad9bfb97a0565'), 'lastUpdateDate': datetime.datetime(2024, 2, 29, 21, 33, 1, 856000), 'version': 0}, {'managerSheetsObjects': ObjectId('65e0f841112ad9bfb97a0571'), 'lastUpdateDate': datetime.datetime(2024, 2, 29, 21, 33, 53, 990000), 'version': 0}, {'managerSheetsObjects': ObjectId('65e5e0190ac1118e85019b99'), 'lastUpdateDate': datetime.datetime(2024, 3, 4, 14, 52, 9, 321000), 'version': 0}, {'managerSheetsObjects': ObjectId('65e5e0620ac1118e85019ba3'), 'lastUpdateDate': datetime.datetime(2024, 3, 4, 14, 53, 22, 15000), 'version': 0}, {'managerSheetsObjects': ObjectId('65e5e0e70ac1118e85019bbb'), 'lastUpdateDate': datetime.datetime(2024, 3, 4, 14, 55, 35, 712000), 'version': 0}, {'managerSheetsObjects': ObjectId('65e601b4f4a04e32e815a69d'), 'lastUpdateDate': datetime.datetime(2024, 3, 4, 17, 15, 32, 704000), 'version': 0}]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(document)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'Crypto'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[21], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mCrypto\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mCipher\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m AES\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mCrypto\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mUtil\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mPadding\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m pad\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mbase64\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m b64encode\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'Crypto'"
+     ]
+    }
+   ],
+   "source": [
+    "from Crypto.Cipher import AES\n",
+    "from Crypto.Util.Padding import pad\n",
+    "from base64 import b64encode\n",
+    "import json\n",
+    "\n",
+    "def encrypt_json(payload, key):\n",
+    "    # Ensure the key is 16 bytes (128 bits)\n",
+    "    key = key[:16]\n",
+    "    # Create a new AES cipher object\n",
+    "    cipher = AES.new(key, AES.MODE_CBC)\n",
+    "    # Convert the payload to JSON and encode it to bytes\n",
+    "    payload_bytes = json.dumps(payload).encode('utf-8')\n",
+    "    # Encrypt the payload\n",
+    "    encrypted_payload = cipher.encrypt(pad(payload_bytes, AES.block_size))\n",
+    "    # The encrypted payload and the IV need to be stored/transmitted\n",
+    "    return b64encode(cipher.iv + encrypted_payload).decode('utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "payload = {\n",
+    "    \"timesheet\": {\n",
+    "        \"action\": \"Submit\",\n",
+    "        \"employeeSheetID\": \"65e0f80d112ad9bfb97a0564\",\n",
+    "        # ...\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "key = \"this is a key123\"\n",
+    "\n",
+    "encrypted_payload = encrypt_json(payload, key)\n",
+    "print(encrypted_payload)"
+   ]
   }
  ],
  "metadata": {
