update work hour

--- a/classes/services/timesheet/test.ipynb
+++ b/classes/services/timesheet/test.ipynb
@@ -1770,7 +1770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1780,7 +1780,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[21], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mCrypto\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mCipher\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m AES\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mCrypto\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mUtil\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mPadding\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m pad\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mbase64\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m b64encode\n",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mCrypto\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mCipher\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m AES\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mCrypto\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mUtil\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mPadding\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m pad\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mbase64\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m b64encode\n",
       "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'Crypto'"
      ]
     }
@@ -1823,6 +1823,96 @@
     "encrypted_payload = encrypt_json(payload, key)\n",
     "print(encrypted_payload)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mar\n"
+     ]
+    }
+   ],
+   "source": [
+    "# get current month name like Jan, Feb, etc\n",
+    "from datetime import datetime\n",
+    "current_date = datetime.now()\n",
+    "current_month = current_date.month\n",
+    "current_month_name = current_date.strftime('%b')\n",
+    "print(current_month_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pymongo import MongoClient\n",
+    "from pymongo.server_api import ServerApi\n",
+    "from bson import ObjectId\n",
+    "employeeSheetID = ObjectId(\"65d64e0c8dd84d95f68a436b\")\n",
+    "client = MongoClient('mongodb+srv://admin:EC2024@employeeportal.yyyw48g.mongodb.net/?retryWrites=true&w=majority&appName=EmployeePortal', server_api=ServerApi('1'), UuidRepresentation=\"standard\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check if current week have any holidays in \n",
+    "from datetime import datetime, timedelta\n",
+    "\n",
+    "# Connect to MongoDB\n",
+    "client = MongoClient('mongodb+srv://admin:EC2024@employeeportal.yyyw48g.mongodb.net/?retryWrites=true&w=majority&appName=EmployeePortal', server_api=ServerApi('1'), UuidRepresentation=\"standard\")\n",
+    "\n",
+    "# Get the current date\n",
+    "now = datetime.now()\n",
+    "\n",
+    "# Find the start and end of the current week\n",
+    "start_of_week = now - timedelta(days=now.weekday())\n",
+    "end_of_week = start_of_week + timedelta(days=6)\n",
+    "\n",
+    "# # Convert dates to strings in the format used in the database\n",
+    "# start_of_week_str = start_of_week.strftime('%b %d')\n",
+    "# end_of_week_str = end_of_week.strftime('%b %d')\n",
+    "\n",
+    "# Query the database for holidays in the current week\n",
+    "holidays = client.TimesheetDB.Holidays.find({'month': 'Jan'})\n",
+    "# holidays = client.TimesheetDB.Holidays.find({\n",
+    "#     'day': {\n",
+    "#         '$gte': start_of_week,\n",
+    "#         '$lte': end_of_week\n",
+    "#     },\n",
+    "# })\n",
+    "\n",
+    "if len(list(holidays)) == 0:\n",
+    "    print(\"No holidays this week\")\n",
+    "print(list(holidays))\n",
+    "# Print the holidays\n",
+    "for holiday in holidays:\n",
+    "    print(f\"{holiday['name']} is on {holiday['day']}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
