leaves get push

--- a/classes/services/timesheet/test.ipynb
+++ b/classes/services/timesheet/test.ipynb
@@ -1857,14 +1857,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Netaji Subhas Chandra Bose Jayanti is on 3rd March, 2024\n"
+      "Netaji Subhas Chandra Bose Jayanti is on 1st March, 2024\n"
      ]
     }
    ],
@@ -1920,14 +1920,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Netaji Subhas Chandra Bose Jayanti is from 6th Mar, 2024 to 8th March, 2024\n"
+      "No holidays this week\n"
      ]
     }
    ],
@@ -2002,7 +2002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -2036,16 +2036,16 @@
     "start_of_week = start_of_week.replace(hour=0, minute=0, second=0, microsecond=0)  # Set time to 12AM\n",
     "end_of_week = start_of_week + timedelta(days=6, hours=23, minutes=59, seconds=59)  # Set time to 11:59PM\n",
     "\n",
-    "# Query the database for holidays in the current week\n",
+    "# Query the database for holidays that start before the end of the current week\n",
     "holidays_cursor = client.LeavesDB.Holidays.find({\n",
-    "    '$or': [\n",
-    "        {'date': {'$gte': start_of_week, '$lte': end_of_week}},  # start date is within the current week\n",
-    "        {'date': {'$lt': start_of_week}, 'duration': {'$gte': (start_of_week - holiday['date']).days}}  # end date is within the current week\n",
-    "    ]\n",
+    "    'date': {'$lte': end_of_week}\n",
     "})\n",
     "\n",
     "# Convert the results to a list\n",
     "holidays = list(holidays_cursor)\n",
+    "\n",
+    "# Filter the holidays to only include those that continue into the current week\n",
+    "holidays = [holiday for holiday in holidays if holiday['date'] + timedelta(days=holiday['duration']) >= start_of_week]\n",
     "\n",
     "if len(holidays) == 0:\n",
     "    print(\"No holidays this week\")\n",
@@ -2082,6 +2082,360 @@
     "# Print the work schedule for the current week\n",
     "for day, schedule in work_schedule.items():\n",
     "    print(f\"{day}: {schedule}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-03-04 00:00:00 2024-03-10 23:59:59\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'date': datetime.datetime(2024, 3, 7, 18, 30),\n",
+       "  'duration': 2,\n",
+       "  'name': 'vacation'}]"
+      ]
+     },
+     "execution_count": 145,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "employeeID = ObjectId(\"65c408582b6c3e4c3208296d\")\n",
+    "\n",
+    "# Find the start and end of the current week\n",
+    "start_of_week = now - timedelta(days=now.weekday())\n",
+    "start_of_week = start_of_week.replace(hour=0, minute=0, second=0, microsecond=0)  # Set time to 12AM\n",
+    "end_of_week = start_of_week + timedelta(days=6, hours=23, minutes=59, seconds=59)  # Set time to 11:59PM\n",
+    "print(start_of_week, end_of_week)\n",
+    "client = MongoClient('mongodb+srv://admin:EC2024@employeeportal.yyyw48g.mongodb.net/?retryWrites=true&w=majority&appName=EmployeePortal', server_api=ServerApi('1'), UuidRepresentation=\"standard\")\n",
+    "pipeline = [\n",
+    "    {\"$match\": {\"employeeID\": employeeID}},\n",
+    "    {\"$unwind\": \"$upcoming_approved_leaves\"},\n",
+    "    {\"$match\": {\"upcoming_approved_leaves.date\": {\"$lte\": end_of_week}}},\n",
+    "    {\"$project\": {\"_id\": 0, \"date\": \"$upcoming_approved_leaves.date\", \"duration\": \"$upcoming_approved_leaves.duration\", \"name\": \"$upcoming_approved_leaves.comment\"}}\n",
+    "]\n",
+    "\n",
+    "leaves_cursor = client.LeavesDB.LeaveBank.aggregate(pipeline)\n",
+    "\n",
+    "# Convert the results to a list\n",
+    "upcoming_leaves = list(leaves_cursor)\n",
+    "upcoming_leaves"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'duration': 4,\n",
+       "  'name': 'Netaji Subhas Chandra Bose Jayanti',\n",
+       "  'date': datetime.datetime(2024, 3, 2, 18, 30)},\n",
+       " {'duration': 1,\n",
+       "  'name': 'New Year',\n",
+       "  'date': datetime.datetime(2024, 1, 1, 18, 30)}]"
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "employeeID = ObjectId(\"65c408582b6c3e4c3208296d\")\n",
+    "employeeDataID = client.WorkBaseDB.Members.find_one({\"_id\": employeeID}, {\"employeeDataID\": 1})[\"employeeDataID\"]\n",
+    "employeeData = client.sample_employee.employeeData.find_one({\"_id\": employeeDataID})\n",
+    "employee_country = employeeData[\"Country\"]\n",
+    "employee_zone = employeeData[\"Zone\"]\n",
+    "pipeline = [\n",
+    "    {\"$match\": {\"date\": {\"$lte\": end_of_week}}},\n",
+    "    {\"$match\": {\n",
+    "        \"$or\": [\n",
+    "            {\"location.country\": \"INTERNATIONAL\"},\n",
+    "            {\"$and\": [\n",
+    "                {\"location.country\": employee_country},\n",
+    "                {\"location.Zone\": employee_zone}\n",
+    "            ]}\n",
+    "        ]\n",
+    "    }},\n",
+    "    {\"$project\": {\"_id\": 0, \"date\": 1, \"duration\": 1, \"name\": 1}}\n",
+    "]\n",
+    "holidays_cursor = client.LeavesDB.Holidays.aggregate(pipeline)\n",
+    "holidays = list(holidays_cursor)\n",
+    "holidays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-03-04 00:00:00 2024-03-10 23:59:59\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'duration': 4,\n",
+       "  'name': 'Netaji Subhas Chandra Bose Jayanti',\n",
+       "  'date': datetime.datetime(2024, 3, 2, 18, 30)},\n",
+       " {'duration': 1,\n",
+       "  'name': 'New Year',\n",
+       "  'date': datetime.datetime(2024, 1, 1, 18, 30)},\n",
+       " {'date': datetime.datetime(2024, 3, 7, 18, 30),\n",
+       "  'duration': 2,\n",
+       "  'name': 'vacation'}]"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "employeeID = ObjectId(\"65c408582b6c3e4c3208296d\")\n",
+    "employeeDataID = client.WorkBaseDB.Members.find_one({\"_id\": employeeID}, {\"employeeDataID\": 1})[\"employeeDataID\"]\n",
+    "employeeData = client.sample_employee.employeeData.find_one({\"_id\": employeeDataID})\n",
+    "employee_country = employeeData[\"Country\"]\n",
+    "employee_zone = employeeData[\"Zone\"]\n",
+    "pipeline = [\n",
+    "    {\"$match\": {\"date\": {\"$lte\": end_of_week}}},\n",
+    "    {\"$match\": {\n",
+    "        \"$or\": [\n",
+    "            {\"location.country\": \"INTERNATIONAL\"},\n",
+    "            {\"$and\": [\n",
+    "                {\"location.country\": employee_country},\n",
+    "                {\"location.Zone\": employee_zone}\n",
+    "            ]}\n",
+    "        ]\n",
+    "    }},\n",
+    "    {\"$project\": {\"_id\": 0, \"date\": 1, \"duration\": 1, \"name\": 1}}\n",
+    "]\n",
+    "holidays_cursor = client.LeavesDB.Holidays.aggregate(pipeline)\n",
+    "holidays = list(holidays_cursor)\n",
+    "\n",
+    "# Find the start and end of the current week\n",
+    "start_of_week = now - timedelta(days=now.weekday())\n",
+    "start_of_week = start_of_week.replace(hour=0, minute=0, second=0, microsecond=0)  # Set time to 12AM\n",
+    "end_of_week = start_of_week + timedelta(days=6, hours=23, minutes=59, seconds=59)  # Set time to 11:59PM\n",
+    "print(start_of_week, end_of_week)\n",
+    "client = MongoClient('mongodb+srv://admin:EC2024@employeeportal.yyyw48g.mongodb.net/?retryWrites=true&w=majority&appName=EmployeePortal', server_api=ServerApi('1'), UuidRepresentation=\"standard\")\n",
+    "pipeline = [\n",
+    "    {\"$match\": {\"employeeID\": employeeID}},\n",
+    "    {\"$unwind\": \"$upcoming_approved_leaves\"},\n",
+    "    {\"$match\": {\"upcoming_approved_leaves.date\": {\"$lte\": end_of_week}}},\n",
+    "    {\"$project\": {\"_id\": 0, \"date\": \"$upcoming_approved_leaves.date\", \"duration\": \"$upcoming_approved_leaves.duration\", \"name\": \"$upcoming_approved_leaves.comment\"}}\n",
+    "]\n",
+    "\n",
+    "leaves_cursor = client.LeavesDB.LeaveBank.aggregate(pipeline)\n",
+    "\n",
+    "# Convert the results to a list\n",
+    "upcoming_leaves = list(leaves_cursor)\n",
+    "\n",
+    "# merge the lists\n",
+    "holidays = holidays + upcoming_leaves\n",
+    "holidays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 196,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pymongo import MongoClient\n",
+    "from pymongo.server_api import ServerApi\n",
+    "from datetime import datetime, timedelta\n",
+    "\n",
+    "def get_work_schedule(employeeID):\n",
+    "    try:\n",
+    "        # Connect to MongoDB\n",
+    "        client = MongoClient('mongodb+srv://admin:EC2024@employeeportal.yyyw48g.mongodb.net/?retryWrites=true&w=majority&appName=EmployeePortal', server_api=ServerApi('1'), UuidRepresentation=\"standard\")\n",
+    "        if isinstance(client, MongoClient):  # If the connection is successful\n",
+    "\n",
+    "            # Get the current date\n",
+    "            now = datetime.now()\n",
+    "\n",
+    "            # Find the start and end of the current week\n",
+    "            start_of_week = now - timedelta(days=now.weekday())\n",
+    "            start_of_week = start_of_week.replace(hour=0, minute=0, second=0, microsecond=0)  # Set time to 12AM\n",
+    "            end_of_week = start_of_week + timedelta(days=6, hours=23, minutes=59, seconds=59)  # Set time to 11:59PM\n",
+    "\n",
+    "            employeeDataID = client.WorkBaseDB.Members.find_one({\"_id\": employeeID}, {\"employeeDataID\": 1})[\"employeeDataID\"]\n",
+    "            employeeData = client.sample_employee.employeeData.find_one({\"_id\": employeeDataID})\n",
+    "            employee_country = employeeData[\"Country\"]\n",
+    "            employee_zone = employeeData[\"Zone\"]\n",
+    "            pipeline = [\n",
+    "                {\"$match\": {\"date\": {\"$lte\": end_of_week}}},\n",
+    "                {\"$match\": {\n",
+    "                    \"$or\": [\n",
+    "                        {\"location.country\": \"INTERNATIONAL\"},\n",
+    "                        {\"$and\": [\n",
+    "                            {\"location.country\": employee_country},\n",
+    "                            {\"location.Zone\": employee_zone}\n",
+    "                        ]}\n",
+    "                    ]\n",
+    "                }},\n",
+    "                {\"$project\": {\"_id\": 0, \"date\": 1, \"duration\": 1, \"name\": 1}}\n",
+    "            ]\n",
+    "            holidays_cursor = client.LeavesDB.Holidays.aggregate(pipeline)\n",
+    "            holidays = list(holidays_cursor)\n",
+    "            \n",
+    "            # Find the start and end of the current week\n",
+    "            start_of_week = now - timedelta(days=now.weekday())\n",
+    "            start_of_week = start_of_week.replace(hour=0, minute=0, second=0, microsecond=0)  # Set time to 12AM\n",
+    "            end_of_week = start_of_week + timedelta(days=6, hours=23, minutes=59, seconds=59)  # Set time to 11:59PM\n",
+    "            pipeline = [\n",
+    "                {\"$match\": {\"employeeID\": employeeID}},\n",
+    "                {\"$unwind\": \"$upcoming_approved_leaves\"},\n",
+    "                {\"$match\": {\"upcoming_approved_leaves.date\": {\"$lte\": end_of_week}}},\n",
+    "                {\"$project\": {\"_id\": 0, \"date\": \"$upcoming_approved_leaves.date\", \"duration\": \"$upcoming_approved_leaves.duration\", \"name\": \"$upcoming_approved_leaves.comment\"}}\n",
+    "            ]\n",
+    "\n",
+    "            leaves_cursor = client.LeavesDB.LeaveBank.aggregate(pipeline)\n",
+    "            # Convert the results to a list\n",
+    "            upcoming_leaves = list(leaves_cursor)\n",
+    "\n",
+    "            if len(holidays) == 0:\n",
+    "                holidays = upcoming_leaves\n",
+    "            elif len(upcoming_leaves) != 0:\n",
+    "                # merge the lists\n",
+    "                holidays = holidays + upcoming_leaves\n",
+    "            # sort the list based on date\n",
+    "            holidays = sorted(holidays, key=lambda x: x['date'])\n",
+    "            # Filter the holidays to only include those that continue into the current week\n",
+    "            holidays = [holiday for holiday in holidays if holiday['date'] + timedelta(days=holiday['duration']) >= start_of_week]\n",
+    "            # return holidays\n",
+    "\n",
+    "            weekend = [{\n",
+    "                \"date\": start_of_week + timedelta(days=5),\n",
+    "                \"duration\": 2,\n",
+    "                \"name\": \"Weekend\"\n",
+    "            }]\n",
+    "            holidays = holidays + weekend\n",
+    "\n",
+    "            if len(holidays) == 0:\n",
+    "                print(\"No holidays this week\")\n",
+    "\n",
+    "            # Initialize a dictionary to store the work schedule for the current week\n",
+    "            work_schedule = {\n",
+    "                \"mon\": {\"work\": \"true\", \"comment\": \"\"},\n",
+    "                \"tue\": {\"work\": \"true\", \"comment\": \"\"},\n",
+    "                \"wed\": {\"work\": \"true\", \"comment\": \"\"},\n",
+    "                \"thu\": {\"work\": \"true\", \"comment\": \"\"},\n",
+    "                \"fri\": {\"work\": \"true\", \"comment\": \"\"},\n",
+    "                \"sat\": {\"work\": \"true\", \"comment\": \"\"},\n",
+    "                \"sun\": {\"work\": \"true\", \"comment\": \"\"},\n",
+    "            }\n",
+    "\n",
+    "            # Define a list of weekday names to index the work_schedule dictionary\n",
+    "            weekday_names = [\"mon\", \"tue\", \"wed\", \"thu\", \"fri\", \"sat\", \"sun\"]\n",
+    "\n",
+    "            # Iterate over the holidays\n",
+    "            for holiday in holidays:\n",
+    "                # Get the date of the holiday\n",
+    "                start_date = holiday['date']\n",
+    "\n",
+    "                # Iterate over each day of the holiday\n",
+    "                for i in range(holiday['duration']):\n",
+    "                    date = start_date + timedelta(days=i)\n",
+    "\n",
+    "                    # Check if the day falls within the current week\n",
+    "                    if start_of_week <= date <= end_of_week:\n",
+    "                        # Get the weekday name\n",
+    "                        weekday_name = weekday_names[date.weekday()]\n",
+    "\n",
+    "                        # If the day already has a holiday, append the new holiday name to the comment\n",
+    "                        if work_schedule[weekday_name][\"work\"] == \"false\":\n",
+    "                            work_schedule[weekday_name][\"comment\"] += \", \" + holiday['name']\n",
+    "                        else:\n",
+    "                            # Otherwise, update the work_schedule dictionary\n",
+    "                            work_schedule[weekday_name] = {\"work\": \"false\", \"comment\": holiday['name']}\n",
+    "\n",
+    "            # Print the work schedule for the current week\n",
+    "            for day, schedule in work_schedule.items():\n",
+    "                print(f\"{day}: {schedule}\")\n",
+    "\n",
+    "            return work_schedule\n",
+    "        else:\n",
+    "            # If the connection fails, print an error message\n",
+    "            print(\"Failed to connect to the MongoDB server while getting work schedule\")\n",
+    "    except Exception as e:\n",
+    "        # If an error occurs, print an error message\n",
+    "        print(\"Error getting work schedule: \", e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mon: {'work': 'false', 'comment': 'Netaji Subhas Chandra Bose Jayanti'}\n",
+      "tue: {'work': 'false', 'comment': 'Netaji Subhas Chandra Bose Jayanti'}\n",
+      "wed: {'work': 'false', 'comment': 'Netaji Subhas Chandra Bose Jayanti'}\n",
+      "thu: {'work': 'false', 'comment': 'Netaji Subhas Chandra Bose Jayanti, vacation'}\n",
+      "fri: {'work': 'false', 'comment': 'Netaji Subhas Chandra Bose Jayanti, vacation'}\n",
+      "sat: {'work': 'false', 'comment': 'Netaji Subhas Chandra Bose Jayanti, Weekend'}\n",
+      "sun: {'work': 'false', 'comment': 'Weekend'}\n",
+      "{'mon': {'work': 'false', 'comment': 'Netaji Subhas Chandra Bose Jayanti'}, 'tue': {'work': 'false', 'comment': 'Netaji Subhas Chandra Bose Jayanti'}, 'wed': {'work': 'false', 'comment': 'Netaji Subhas Chandra Bose Jayanti'}, 'thu': {'work': 'false', 'comment': 'Netaji Subhas Chandra Bose Jayanti, vacation'}, 'fri': {'work': 'false', 'comment': 'Netaji Subhas Chandra Bose Jayanti, vacation'}, 'sat': {'work': 'false', 'comment': 'Netaji Subhas Chandra Bose Jayanti, Weekend'}, 'sun': {'work': 'false', 'comment': 'Weekend'}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "employeeID = ObjectId(\"65c408582b6c3e4c3208296d\")\n",
+    "workdays_week = get_work_schedule(employeeID)\n",
+    "print(workdays_week)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from bson import ObjectId\n",
+    "\n",
+    "def get_leave_data(employee_id):\n",
+    "    try:\n",
+    "        # Connect to MongoDB\n",
+    "        client = MongoClient('mongodb+srv://admin:EC2024@employeeportal.yyyw48g.mongodb.net/?retryWrites=true&w&maj&appName=EmployeePortal', server_api=ServerApi('1'), UuidRepresentation=\"standard\")\n",
+    "        if isinstance(client, MongoClient):  # If the connection is successful\n",
+    "\n",
+    "            # Query the database for the leave data of the given employee\n",
+    "            leave_data_cursor = client.LeavesDB.LeaveBank.find({\n",
+    "                'employeeID': ObjectId(employee_id)\n",
+    "            })\n",
+    "\n",
+    "            # Convert the results to a list\n",
+    "            leave_data = list(leave_data_cursor)\n",
+    "\n",
+    "            return leave_data\n",
+    "        else:\n",
+    "            # If the connection fails, print an error message\n",
+    "            print(\"Failed to connect to the MongoDB server while getting leave data\")\n",
+    "    except Exception as e:\n",
+    "        # If an error occurs, print an error message\n",
+    "        print(\"Error getting leave data: \", e)"
    ]
   },
   {
